--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "@nuxt/devtools": "latest",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.9",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^3.2.1",
+    "daisyui": "^3.5.1",
     "nuxt": "^3.6.5",
-    "postcss": "^8.4.26",
+    "nuxt-security": "^0.14.4",
+    "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@pinia/nuxt": "^0.4.11",
     "nuxt3-socket.io": "^0.2.0",
-    "pinia": "^2.1.4"
+    "pinia": "^2.1.6"
   }
 }
