--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.14",
     "cypress": "^12.17.3",
     "daisyui": "^3.5.1",
+    "eslint": "^8.50.0",
     "nuxt": "^3.6.5",
     "nuxt-security": "^0.14.4",
     "postcss": "^8.4.27",
